--- a/cliente/src/componentes/FormInscripcion/formInscripcion.css
+++ b/cliente/src/componentes/FormInscripcion/formInscripcion.css
@@ -15,7 +15,7 @@
     animation: fadeInForm 0.6s ease-in-out;
     margin: 0 auto;
     transition: all 0.3s ease-in-out;
-    
+    width: 90%;
 }
 
 .formulario_inscripcion_filtros{
